--- a/Home.html
+++ b/Home.html
@@ -105,21 +105,20 @@
                 <br>
             </p>
         </div>
+
         <div class="square-box">
-            <div class="poster-container">
-                <div class="poster-slider">
-                  <div class="poster">
-                    <img src="./images/poster2.jpg">
-                  </div>
-                  <!--
-                  <div class="poster">
-                    <img src="./images/poster2.jpg">
-                  </div>
-                  <div class="poster">
-                    <img src="./images/main.jpg">
-                  </div> -->
-                </div>
+          <div class="poster-container">
+            <div class="poster-slider">
+              <div class="poster active"> <img src="./images/poster2.jpg">
+              </div>
+              <div class="poster">
+                <img src="./images/Design2-Amh.jpg">
+              </div>
+              <div class="poster">
+                <img src="./images/main2.jpg">
+              </div>
             </div>
+          </div>
             <div class="countdown-container">
                 <span id="days" data-label="Days">00:Days</span>
                 <span id="hours" data-label="Hours">00:Hours</span>
@@ -127,7 +126,7 @@
                 <span id="seconds" data-label="Seconds">00:Seconds</span>
             </div>
             <div class="hotel-booking">
-                <a href="https://book.passkey.com/event/50645969/owner/55306/home" class="book-now-button">Book Hotel</a>
+                <a href="https://book.passkey.com/event/50645969/owner/55306/home" class="book-now-button" target="_blank">Book Hotel</a>
             </div>
 
         </div> 
