--- a/Home.html
+++ b/Home.html
@@ -48,10 +48,10 @@
         <div id="header-container">
           <div id="logo-container">
             <img
-              src="./images/apostolic-church-logo.png"
+              src="./images/logo-ATL.png"
               alt="Atlanta Bethel Apostolic Church Logo"
-              width="60"
-              height="60"
+              width="100"
+              height="100"
             />
             <div id="title-container">
               <p id="title-line1">ATLANTA BETHEL APOSTOLIC CHURCH</p>
