adjusted margins, and colors

--- a/Contact.html
+++ b/Contact.html
@@ -15,8 +15,8 @@
           <img
             src="images/apostolic-church-logo.png"
             alt="Atlanta Bethel Apostolic Church Logo"
-            width="60"
-            height="60"
+            width="100"
+            height="100"
           />
           <div id="title-container">
             <p id="title-line1">ATLANTA BETHEL APOSTOLIC CHURCH</p>
@@ -26,10 +26,11 @@
         <nav>
           <ul>
             <li><a href="Home.html">HOME</a></li>
-            <li><a href="About.html">ABOUT US</a></li>
+            <li><a href="About.html">ABOUT</a></li>
             <li><a href="Ministries.html">MINISTRIES</a></li>
-            <li><a href="Media.html"><Main>MEDIA</Main></a></li>
+            <li><a href="Media.html"><main>MEDIA</main></a></li>
             <li class="current"><a href="Contact.html">CONTACT</a></li>
+            <li><a href="Give.html">GIVE</a></li>
           </ul>
         </nav>
       </div>
@@ -45,23 +46,23 @@
           <div class="contact-card">
             <h3>Pastor</h3>
             <img src="./images/Placeholder.png" alt="Pastor" />
-            <p>Name: Abera Milkano</p>
-            <p>Email:</p>
-            <p>Phone:</p>
+            <p>P.Abera Milkano</p>
+            <p></p>
+            <!-- <p>Phone:</p> -->
           </div>
           <div class="contact-card">
             <h3>Secretary</h3>
             <img src="./images/Placeholder.png" alt="Secretary" />
-            <p>Name: Natnael Amelo</p>
+            <p></p>
             <p>Email:</p>
-            <p>Phone:</p>
+            <!-- <p>Phone:</p> -->
           </div>
           <div class="contact-card">
             <h3>Treasury</h3>
             <img src="./images/Placeholder.png" alt="Treasury" />
-            <p>Name: Br.Tibebu </p>
-            <p>Email:</p>
-            <p>Phone:</p>
+            <p>Br.Tibebu Simon </p>
+            <p></p>
+            <!-- <p>Phone:</p> -->
           </div>
         </div>
         <div class="contact-row">
@@ -69,30 +70,30 @@
           <div class="contact-card">
             <h3>Fathers Ministry</h3>
             <img src="./images/Placeholder.png" alt="Treasury" />
-            <p>Name: Natnael Amelo</p>
-            <p>Email:</p>
-            <p>Phone:</p>
+            <p>Br.Michael Welde-Medhin</p>
+            <p></p>
+            <!-- <p>Phone:</p> -->
           </div>
           <div class="contact-card">
             <h3>Mothers Ministry</h3>
             <img src="./images/Placeholder.png" alt="Treasury" />
-            <p>Name: Natnael Amelo</p>
-            <p>Email:</p>
-            <p>Phone:</p>
+            <p>Sis.Wenshet</p>
+            <p></p>
+            <!-- <p>Phone:</p> -->
           </div>
           <div class="contact-card">
             <h3>Youth Ministry</h3>
             <img src="./images/Placeholder.png" alt="Treasury" />
-            <p>Name: Natnael Amelo</p>
-            <p>Email:</p>
-            <p>Phone:</p>
+            <p>Sis.Jerry</p>
+            <p></p>
+            <!-- <p>Phone:</p> -->
           </div>
           <div class="contact-card">
             <h3>Sunday School</h3>
             <img src="./images/Placeholder.png" alt="Treasury" />
-            <p>Name: Natnael Amelo</p>
-            <p>Email:</p>
-            <p>Phone:</p>
+            <p>Br.Michael Welde-Medhin</p>
+            <p></p>
+            <p></p>
           </div>
         </div>
       </section>
