added css under styles

--- a/Media.html
+++ b/Media.html
@@ -40,8 +40,8 @@
 
     <!--container for title-->
     <div class="containerText">
-        <img src="images/Media-3.png" alt="Title Image" width="auto" height="100">
-        <p>Join us on our Media platforms for YouTube Videos and Live Services</p>
+        <img src="images/Media-3.png" alt="Title Image" width="auto" height="150">
+        <p>Join us on our Media platforms for YouTube Videos and Live Streams</p>
     </div>
 
     <!--container for the rest of the components-->
@@ -53,40 +53,40 @@
                     <img src="https://img.youtube.com/vi/KA3XrljHvFg/0.jpg"
                     alt="Circle 1">
                     <div class="circle-description">
-                        <h3>ACIFNA Conference 2023</h3>
+                        <h3>ACIFNA Conference 2022 Atlanta choir</h3>
                     </a>
-                        <p>Midst of the world by Bishop Degu</p>
+                        <p>Title : Midst of the world by Bishop Degu</p>
                     </div>
 
             </div>
             <div>
-                <a href="https://youtu.be/KA3XrljHvFg?si=eplZICHA77DRDXVo" width="auto" height="100">
-                    <img src="https://img.youtube.com/vi/KA3XrljHvFg/0.jpg"
+                <a href="https://www.youtube.com/watch?v=RcMk6RpRaMk" width="auto" height="100">
+                    <img src="https://img.youtube.com/vi/RcMk6RpRaMk/0.jpg"
                     alt="Circle 1">
                     <div class="circle-description">
-                        <h3>ACIFNA Conference 2023</h3>
+                        <h3>ACIFNA Conference 2022 Atlanta choir</h3>
                     </a>
-                        <p>Midst of the world by Bishop Degu</p>
+                        <p>እልል እልል ጌታ የሱስ ይገባዋል /አሜን አሜን ብዙ ምስጋና</p>
                     </div>
             </div>
             <div>
-                <a href="https://youtu.be/KA3XrljHvFg?si=eplZICHA77DRDXVo" width="auto" height="100">
-                    <img src="https://img.youtube.com/vi/KA3XrljHvFg/0.jpg"
+                <a href="https://www.youtube.com/watch?v=RbVhMilZD9E" width="auto" height="100">
+                    <img src="https://img.youtube.com/vi/RbVhMilZD9E/0.jpg"
                     alt="Circle 1">
                     <div class="circle-description">
-                        <h3>ACIFNA Conference 2023</h3>
+                        <h3>ACIFNA Conference 2023 West cost choir</h3>
                     </a>
-                        <p>Midst of the world by Bishop Degu</p>
+                        <p>አዲስ ነገር እግዚአብሔር ያደርጋል</p>
                     </div>
             </div>
             <div>
-                <a href="https://youtu.be/KA3XrljHvFg?si=eplZICHA77DRDXVo" width="auto" height="100">
-                    <img src="https://img.youtube.com/vi/KA3XrljHvFg/0.jpg"
+                <a href="https://www.youtube.com/watch?v=8aQDVzGwwO8" width="auto" height="100">
+                    <img src="https://img.youtube.com/vi/8aQDVzGwwO8/0.jpg"
                     alt="Circle 1">
                     <div class="circle-description">
-                        <h3>ACIFNA Conference 2023</h3>
+                        <h3>Songs collection</h3>
                     </a>
-                        <p>Midst of the world by Bishop Degu</p>
+                        <p>Apostolic Church Of Ethiopia slow Mezmur Mix#1</p>
                     </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
 
 
 
-    <img class="rectangle-image" src="images/Watch Live-2.png" alt="Rectangle Image" width="auto" height="100">
+    <img class="rectangle-image" src="images/Watch Live-2.png" alt="Rectangle Image" width="auto" height="150">
 
     <div class="rectangle-image">
         <video autoplay muted loop>
