--- a/Media.html
+++ b/Media.html
@@ -53,7 +53,7 @@
                     <img src="https://img.youtube.com/vi/KA3XrljHvFg/0.jpg"
                     alt="Circle 1">
                     <div class="circle-description">
-                        <h3>ACIFNA Conference 2022 Atlanta choir</h3>
+                        <h3>ACIFNA Conference 2023 sermon</h3>
                     </a>
                         <p>Title : Midst of the world by Bishop Degu</p>
                     </div>
