added zoom link

--- a/Media.html
+++ b/Media.html
@@ -106,7 +106,7 @@
             Your browser does not support the video tag.
         </video>
         <div class="content">
-            <a href="https://www.w3schools3.com" width="auto" height="100">
+            <a href="https://us02web.zoom.us/j/88124075242?pwd=cjhqSFRWRmlLUTFYWFFVKzY5V3BzZz09" width="auto" height="100">
                 <img src="images/Pic.png" alt="Rectangle Image">
             </a>
         </div>
