--- a/Media.html
+++ b/Media.html
@@ -74,7 +74,7 @@
                     <img src="https://img.youtube.com/vi/RbVhMilZD9E/0.jpg"
                     alt="Circle 1">
                     <div class="circle-description">
-                        <h3>ACIFNA Conference 2023 West cost choir</h3>
+                        <h3>ACIFNA Conference 2023 West coast choir</h3>
                     </a>
                         <p>አዲስ ነገር እግዚአብሔር ያደርጋል</p>
                     </div>
