--- a/Home.html
+++ b/Home.html
@@ -48,7 +48,7 @@
         <div id="header-container">
           <div id="logo-container">
             <img
-              src="./images/logo-ATL.png"
+              src="./images/apostolic-church-logo.png"
               alt="Atlanta Bethel Apostolic Church Logo"
               width="100"
               height="100"
