--- a/Home.html
+++ b/Home.html
@@ -61,7 +61,7 @@
           <nav>
             <ul>
               <li><a href="Home.html">HOME</a></li>
-              <li><a href="About.html">ABOUT US</a></li>
+              <li><a href="About.html">ABOUT</a></li>
               <li><a href="Ministries.html">MINISTRIES</a></li>
               <li><a href="Media.html"><Main>MEDIA</Main></a></li>
               <li><a href="Give.html"><Main>GIVE</Main></a></li>
