--- a/Contact.html
+++ b/Contact.html
@@ -26,7 +26,7 @@
         <nav>
           <ul>
             <li><a href="Home.html">HOME</a></li>
-            <li><a href="About.html">ABOUT</a></li>
+            <li><a href="About.html">ABOUT US</a></li>
             <li><a href="Ministries.html">MINISTRIES</a></li>
             <li><a href="Media.html"><main>MEDIA</main></a></li>
             <li class="current"><a href="Contact.html">CONTACT</a></li>
