--- a/About.html
+++ b/About.html
@@ -38,7 +38,7 @@
         <nav>
           <ul>
             <li><a href="Home.html">HOME</a></li>
-            <li class="current"><a href="About.html">ABOUT</a></li>
+            <li class="current"><a href="About.html">ABOUT US</a></li>
             <li><a href="Ministries.html">MINISTRIES</a></li>
             <li>
               <a href="Media.html"><main>MEDIA</main></a>
