--- a/Home.html
+++ b/Home.html
@@ -115,8 +115,27 @@
                 <img src="./images/Design2-Amh.jpg">
               </div>
               <div class="poster">
-                <img src="./images/main2.jpg">
+                <img src="./images/conference-images/image-1.jpg">
               </div>
+              <div class="poster">
+                <img src="./images/conference-images/image-2.jpg">
+              </div>
+              <div class="poster">
+                <img src="./images/conference-images/image-3.jpg">
+              </div>
+              <div class="poster">
+                <img src="./images/conference-images/image-4.jpg">
+              </div>
+              <div class="poster">
+                <img src="./images/conference-images/image-5.jpg">
+              </div>
+              <div class="poster">
+                <img src="./images/conference-images/image-6.jpg">
+              </div>
+              <div class="poster">
+                <img src="./images/conference-images/image-7.jpg">
+              </div>
+
             </div>
           </div>
             <div class="countdown-container">
