--- a/Media.html
+++ b/Media.html
@@ -14,12 +14,17 @@
     <!--header-->
     <header class="main-header header-style-one">
         <div id="header-container">
+          <!-- Hamburger Menu Icon for small screens -->
+          <div class="hamburger-menu" onclick="toggleMenu()">
+            <i class="fa fa-bars"></i>
+          </div>
+
           <div id="logo-container">
             <img
               src="./images/apostolic-church-logo.png"
               alt="Atlanta Bethel Apostolic Church Logo"
-              width="60"
-              height="60"
+              width="100"
+              height="100"
             />
             <div id="title-container">
               <p id="title-line1">ATLANTA BETHEL APOSTOLIC CHURCH</p>
@@ -28,15 +33,18 @@
           </div>
           <nav>
             <ul>
-                <li><a href="Home.html">HOME</a></li>
-                <li><a href="About.html">ABOUT US</a></li>
-                <li><a href="Ministries.html">MINISTRIES</a></li>
-                <li><a href="Media.html"><Main>MEDIA</Main></a></li>
-                <li class="current"><a href="Contact.html">CONTACT</a></li>
+              <li><a href="Home.html">HOME</a></li>
+              <li class="current"><a href="About.html">ABOUT US</a></li>
+              <li><a href="Ministries.html">MINISTRIES</a></li>
+              <li>
+                <a href="Media.html"><main>MEDIA</main></a>
+              </li>
+              <li><a href="Contact.html">CONTACT</a></li>
+              <li><a href="Give.html">GIVE</a></li>
             </ul>
           </nav>
         </div>
-      </header>
+    </header>
 
     <!--container for title-->
     <div class="containerText">
