edited header and footer

--- a/Media.html
+++ b/Media.html
@@ -124,35 +124,43 @@
     <!--footer-->
     <div class="footer">
         <footer>
-            <!--footer grid-->
-            <div class="footer-content">
-                <div class="address">
-                    <p>485 S INDIAN CREEK DR,</p>
-                    <p>STONE MOUNTAIN, GA 30083</p>
-                </div>
-                <div class="service-times">
-                    <p>SUNDAYs</p>
-                    <p>8:30AM |10:00 AM - 12:00 PM</p>
-                </div>
-                <div class="contact-info">
-                    <p>CONTACT INFO</p>
-                    <p>PHONE (770)491-0228:</p>
-                    <p>EMAIL: INFO@ATLCHURCH.com</p>
-                    <p>HOURS: MONDAY - FRIDAY |8:30 AM - 4:30 PM </p>
-                </div>
-
-                <div class="social-media">
-                    <a href="#" class="fa fa-facebook"></a>
-                    <a href="#" class="fa fa-twitter"></a>
-                    <a href="#" class="fa fa-youtube"></a>
-
-
-                </div>
+          <div class="footer-content">
+            <button onclick="toggleSection('address-info')">Location</button>
+            <div id="address-info" class="address">
+              <p>485 S INDIAN CREEK DR,</p>
+              <p>STONE MOUNTAIN, GA 30083</p>
             </div>
-            <div class="copyright">
-                <p>&copy; 2023 ATLANTA BETHEL APOSTOLIC CHURCH. All rights reserved.</p>
+
+            <button onclick="toggleSection('service-times-info')">
+              Service Times
+            </button>
+            <div id="service-times-info" class="service-times">
+              <p>SUNDAYs</p>
+              <p>8:30AM | 10:00 AM - 12:00 PM</p>
             </div>
+
+            <button onclick="toggleSection('contact-info-detail')">
+              Contact Info
+            </button>
+            <div id="contact-info-detail" class="contact-info">
+              <p>CONTACT INFO</p>
+              <p>PHONE (678) 469-2718</p>
+              <p>EMAIL: INFO@ATLCHURCH.com</p>
+              <p>HOURS: MONDAY - FRIDAY |8:30 AM - 4:30 PM</p>
+            </div>
+
+            <div class="social-media">
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-twitter"></a>
+              <a href="#" class="fa fa-youtube"></a>
+            </div>
+          </div>
+          <div class="copyright">
+            <p>
+              &copy; 2023 ATLANTA BETHEL APOSTOLIC CHURCH. All rights reserved.
+            </p>
+          </div>
         </footer>
-    </div>
+      </div>
 </body>
 </html>
