--- a/Home.html
+++ b/Home.html
@@ -61,7 +61,7 @@
           <nav>
             <ul>
               <li><a href="Home.html">HOME</a></li>
-              <li><a href="About.html">ABOUT</a></li>
+              <li><a href="About.html">ABOUT US</a></li>
               <li class="dropdown">MINISTRIES</a>
                 <div class="dropdown-content">
                   <a href="Fathers.html">Fathers Ministry</a>
