--- a/Home.html
+++ b/Home.html
@@ -90,7 +90,7 @@
     </div>
     
     <!-- Announcements and Info Boxes -->
-    <div class="box-container">
+    <div class="wrapper">  <div class="box-container">
         <div class="box-content">
         <h1>Announcements</h1>
             <p>
