--- a/About.html
+++ b/About.html
@@ -38,13 +38,18 @@
         <nav>
           <ul>
             <li><a href="Home.html">HOME</a></li>
-            <li class="current"><a href="About.html">ABOUT US</a></li>
-            <li><a href="Ministries.html">MINISTRIES</a></li>
-            <li>
-              <a href="Media.html"><main>MEDIA</main></a>
-            </li>
-            <li><a href="Contact.html">CONTACT</a></li>
-            <li><a href="Give.html">GIVE</a></li>
+              <li><a href="About.html">ABOUT US</a></li>
+              <li class="dropdown">MINISTRIES</a>
+                <div class="dropdown-content">
+                  <a href="Fathers.html">Fathers Ministry</a>
+                  <a href="Mothers.html">Mothers Ministry</a>
+                  <a href="Youth.html">Youth Ministry</a>
+                  <a href="Sunday School.html">Sunday School Ministry</a>
+                </div>
+              </li>
+              <li><a href="Media.html"><Main>MEDIA</Main></a></li>
+              <li><a href="Give.html"><Main>GIVE</Main></a></li>
+              <li class="current"><a href="Contact.html">CONTACT</a></li>
           </ul>
         </nav>
       </div>
@@ -368,7 +373,7 @@
       </section>
     </section>
 
-    <div class="doctrine-scripts">
+    <!-- <div class="doctrine-scripts">
       <img
         src="titles/Doctrine Scriptures.png"
         alt="Doctrine Scriptures Title"
@@ -386,7 +391,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua.
       </p>
-    </div>
+    </div> -->
 
     <!-- Footer -->
     <div class="footer">
