--- a/Media.html
+++ b/Media.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
     <link rel="stylesheet" href="./styles/Media.css">
+    <link rel="stylesheet" href="./styles/About.css">
+
 
     <title>Media</title>
 
@@ -14,12 +22,17 @@
     <!--header-->
     <header class="main-header header-style-one">
         <div id="header-container">
+          <!-- Hamburger Menu Icon for small screens -->
+          <div class="hamburger-menu" onclick="toggleMenu()">
+            <i class="fa fa-bars"></i>
+          </div>
+
           <div id="logo-container">
             <img
               src="./images/apostolic-church-logo.png"
               alt="Atlanta Bethel Apostolic Church Logo"
-              width="60"
-              height="60"
+              width="100"
+              height="100"
             />
             <div id="title-container">
               <p id="title-line1">ATLANTA BETHEL APOSTOLIC CHURCH</p>
@@ -28,15 +41,19 @@
           </div>
           <nav>
             <ul>
-                <li><a href="Home.html">HOME</a></li>
-                <li><a href="About.html">ABOUT US</a></li>
-                <li><a href="Ministries.html">MINISTRIES</a></li>
-                <li><a href="Media.html"><Main>MEDIA</Main></a></li>
-                <li class="current"><a href="Contact.html">CONTACT</a></li>
+              <li><a href="Home.html">HOME</a></li>
+              <li class="current"><a href="About.html">ABOUT US</a></li>
+              <li><a href="Ministries.html">MINISTRIES</a></li>
+              <li>
+                <a href="Media.html"><main>MEDIA</main></a>
+              </li>
+              <li><a href="Contact.html">CONTACT</a></li>
+              <li><a href="Give.html">GIVE</a></li>
             </ul>
           </nav>
         </div>
       </header>
+
 
     <!--container for title-->
     <div class="containerText">
@@ -108,6 +125,7 @@
         <div class="content">
             <a href="https://us02web.zoom.us/j/88124075242?pwd=cjhqSFRWRmlLUTFYWFFVKzY5V3BzZz09" width="auto" height="100">
                 <img src="images/Pic.png" alt="Rectangle Image">
+
             </a>
         </div>
     </div>
@@ -115,35 +133,43 @@
     <!--footer-->
     <div class="footer">
         <footer>
-            <!--footer grid-->
-            <div class="footer-content">
-                <div class="address">
-                    <p>485 S INDIAN CREEK DR,</p>
-                    <p>STONE MOUNTAIN, GA 30083</p>
-                </div>
-                <div class="service-times">
-                    <p>SUNDAYs</p>
-                    <p>8:30AM |10:00 AM - 12:00 PM</p>
-                </div>
-                <div class="contact-info">
-                    <p>CONTACT INFO</p>
-                    <p>PHONE (770)491-0228:</p>
-                    <p>EMAIL: INFO@ATLCHURCH.com</p>
-                    <p>HOURS: MONDAY - FRIDAY |8:30 AM - 4:30 PM </p>
-                </div>
-
-                <div class="social-media">
-                    <a href="#" class="fa fa-facebook"></a>
-                    <a href="#" class="fa fa-twitter"></a>
-                    <a href="#" class="fa fa-youtube"></a>
-
-
-                </div>
+          <div class="footer-content">
+            <button onclick="toggleSection('address-info')">Location</button>
+            <div id="address-info" class="address">
+              <p>485 S INDIAN CREEK DR,</p>
+              <p>STONE MOUNTAIN, GA 30083</p>
             </div>
-            <div class="copyright">
-                <p>&copy; 2023 ATLANTA BETHEL APOSTOLIC CHURCH. All rights reserved.</p>
+
+            <button onclick="toggleSection('service-times-info')">
+              Service Times
+            </button>
+            <div id="service-times-info" class="service-times">
+              <p>SUNDAYs</p>
+              <p>8:30AM | 10:00 AM - 12:00 PM</p>
             </div>
+
+            <button onclick="toggleSection('contact-info-detail')">
+              Contact Info
+            </button>
+            <div id="contact-info-detail" class="contact-info">
+              <p>CONTACT INFO</p>
+              <p>PHONE (678) 469-2718</p>
+              <p>EMAIL: INFO@ATLCHURCH.com</p>
+              <p>HOURS: MONDAY - FRIDAY |8:30 AM - 4:30 PM</p>
+            </div>
+
+            <div class="social-media">
+              <a href="#" class="fa fa-facebook"></a>
+              <a href="#" class="fa fa-twitter"></a>
+              <a href="#" class="fa fa-youtube"></a>
+            </div>
+          </div>
+          <div class="copyright">
+            <p>
+              &copy; 2023 ATLANTA BETHEL APOSTOLIC CHURCH. All rights reserved.
+            </p>
+          </div>
         </footer>
-    </div>
+      </div>
 </body>
 </html>
