--- a/Contact.html
+++ b/Contact.html
@@ -27,10 +27,18 @@
           <ul>
             <li><a href="Home.html">HOME</a></li>
             <li><a href="About.html">ABOUT US</a></li>
-            <li><a href="Ministries.html">MINISTRIES</a></li>
-            <li><a href="Media.html"><main>MEDIA</main></a></li>
+            <li class="dropdown">MINISTRIES</a>
+              <div class="dropdown-content">
+                <a href="Fathers.html">Fathers Ministry</a>
+                <a href="Mothers.html">Mothers Ministry</a>
+                <a href="Youth.html">Youth Ministry</a>
+                <a href="Sunday School.html">Sunday School Ministry</a>
+              </div>
+            </li>
+            <li><a href="Media.html"><Main>MEDIA</Main></a></li>
+            <li><a href="Give.html"><Main>GIVE</Main></a></li>
             <li class="current"><a href="Contact.html">CONTACT</a></li>
-            <li><a href="Give.html">GIVE</a></li>
+
           </ul>
         </nav>
       </div>
