--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
     <link rel="stylesheet" href="styles/About.css" />
-    <!-- Add icon library -->
+    
 
     <link
       rel="stylesheet"
@@ -19,9 +19,9 @@
     <header class="main-header header-style-one">
       <div id="header-container">
         <!-- Hamburger Menu Icon for small screens -->
-        <div class="hamburger-menu" onclick="toggleMenu()">
+        <!-- <div class="hamburger-menu" onclick="toggleMenu()">
           <i class="fa fa-bars"></i>
-        </div>
+        </div> -->
 
         <div id="logo-container">
           <img
@@ -395,7 +395,7 @@
 
     <!-- Footer -->
     <div class="footer">
-      <footer>
+      <!-- <footer>
         <div class="footer-content">
           <button onclick="toggleSection('address-info')">Location</button>
           <div id="address-info" class="address">
@@ -432,7 +432,40 @@
             &copy; 2023 ATLANTA BETHEL APOSTOLIC CHURCH. All rights reserved.
           </p>
         </div>
+      </footer> -->
+
+      <footer>
+        <!--footer grid-->
+        <div class="footer-content">
+          <div class="address">
+            <p>485 S INDIAN CREEK DR,</p>
+            <p>STONE MOUNTAIN, GA 30083</p>
+          </div>
+          <div class="service-times">
+            <p>SUNDAYs</p>
+            <p>8:30AM |10:00 AM - 12:00 PM</p>
+          </div>
+          <div class="contact-info">
+            <p>CONTACT INFO</p>
+            <p>PHONE: (678) 469-2718</p>
+            <p>EMAIL: INFO@ATLCHURCH.com</p>
+            <p>HOURS: MONDAY - FRIDAY |8:30 AM - 4:30 PM</p>
+          </div>
+
+          <div class="social-media">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-youtube"></a>
+          </div>
+        </div>
+
+        <div class="copyright">
+          <p>
+            &copy; 2023 ATLANTA BETHEL APOSTOLIC CHURCH. All rights reserved.
+          </p>
+        </div>
       </footer>
+
     </div>
   </body>
 </html>
