--- a/Give.html
+++ b/Give.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us</title>
+    <title>Give</title>
+    <link rel="stylesheet" href="./styles/Media.css">
     <link rel="stylesheet" href="styles/About.css" />
     <!-- Add icon library -->
 
