--- a/Media.html
+++ b/Media.html
@@ -42,12 +42,17 @@
           <nav>
             <ul>
               <li><a href="Home.html">HOME</a></li>
-              <li class="current"><a href="About.html">ABOUT US</a></li>
-              <li><a href="Ministries.html">MINISTRIES</a></li>
-              <li>
-                <a href="Media.html"><main>MEDIA</main></a>
+              <li><a href="About.html">ABOUT US</a></li>
+              <li class="dropdown">MINISTRIES</a>
+                <div class="dropdown-content">
+                  <a href="Fathers.html">Fathers Ministry</a>
+                  <a href="Mothers.html">Mothers Ministry</a>
+                  <a href="Youth.html">Youth Ministry</a>
+                  <a href="Sunday School.html">Sunday School Ministry</a>
+                </div>
               </li>
-              <li><a href="Give.html">GIVE</a></li>
+              <li><a href="Media.html"><Main>MEDIA</Main></a></li>
+              <li><a href="Give.html"><Main>GIVE</Main></a></li>
               <li><a href="Contact.html">CONTACT</a></li>
             </ul>
           </nav>
