header responsiveness removed

--- a/Give.html
+++ b/Give.html
@@ -20,9 +20,9 @@
     <header class="main-header header-style-one">
       <div id="header-container">
         <!-- Hamburger Menu Icon for small screens -->
-        <div class="hamburger-menu" onclick="toggleMenu()">
+        <!-- <div class="hamburger-menu" onclick="toggleMenu()">
           <i class="fa fa-bars"></i>
-        </div>
+        </div> -->
 
         <div id="logo-container">
           <img
